package org.example.tema6.practica1;

abstract class MetodoPago {

    abstract void procesarPago (double importe);
}
